Calling the single article API using slug Added the slug in database Updated the import articles command to add the slug in the database
