# app/Http/Resources/ArticleResource.php
@@ -13,6 +13,7 @@ use App\Models\Article;
  *     @OA\Property(property="title", type="string", example="The Art of Letting Go: Why Detachment Brings Peace"),
  *     @OA\Property(property="subtitle", type="string", example="Understanding the freedom in releasing control and expectations"),
  *     @OA\Property(property="body", type="string", example="In a world that constantly encourages us to hustle, chase, and control outcomes, the idea of letting go can feel like giving up. But true peace and growth often begin when we detach from what we can't control. By surrendering the need for a fixed result, you free yourself from unnecessary anxiety. You allow life to unfold naturally, and often, in better ways than you imagined. Practicing detachment is not weakness; it's strength rooted in trust and emotional maturity."),
+ *     @OA\Property(property="slug", type="string", example="the-art-of-letting-go"),
  * )
  *
  */
@@ -28,7 +29,8 @@ class ArticleResource extends JsonResource
         return [
             'title' => $this->title,
             'subtitle' => $this->subtitle,
-            'body' => $this->body
+            'body' => $this->body,
+            'slug' => $this->slug
         ];
     }
 }
