# routes/api.php
@@ -9,5 +9,5 @@ Route::post('/login', [LoginAPIController::class, 'login']);
 
 Route::middleware(['auth:sanctum'])->prefix('v1')->group(function () {
     Route::get('/articles', [ArticleAPIController::class, 'index'])->name('articles.index');
-    Route::get('/article/{article}', [ArticleAPIController::class, 'show'])->name('article.show');
+    Route::get('/article/{article:slug}', [ArticleAPIController::class, 'show'])->name('article.show');
 });
